--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body
 
 <ol>
 <li><a href="https://microstudio.io/SainiSS/tutorialcreateagame/PFA7UY2M/">Digital Game 0</a></li>
+<li><a href="https://microstudio.io/SainiSS/analoggame1/NT68J7GY">Digital Game 1</a></li>    
 </ol>
 
 </body>
