--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ body
 <ol>
 <li><a href="https://microstudio.io/SainiSS/tutorialcreateagame/PFA7UY2M/">Digital Game 0</a></li>
 <li><a href="https://microstudio.io/SainiSS/analoggame1/NT68J7GY/">Digital Game 1</a></li>
-<li><a href="https://microstudio.io/SainiSS/digitalgame1b/YJ7PY5NR/">Digital Game 1B</a></li> 
+<li><a href="https://microstudio.io/SainiSS/digitalgame1b/YJ7PY5NR/">Digital Game 1B</a></li>
+<li><a href="https://microstudio.io/Zachary/digitalgame2a/5M2Z5TGU/">Digital Game 2A</a></li>
 </ol>
 
 </body>
