--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body
 <li><a href="https://microstudio.io/SainiSS/analoggame1/NT68J7GY/">Digital Game 1</a></li>
 <li><a href="https://microstudio.io/SainiSS/digitalgame1b/YJ7PY5NR/">Digital Game 1B</a></li>
 <li><a href="https://microstudio.io/Zachary/digitalgame2a/5M2Z5TGU/">Digital Game 2A</a></li>
-<li><a href="https://microstudio.io/Zachary/digitalgame2a2/ZM54J9D5/">Digital Game 2A</a></li>
+<li><a href="https://microstudio.io/Zachary/digitalgame2a2/ZM54J9D5/">Digital Game 2B</a></li>
 </ol>
 
 </body>
