--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body
 <li><a href="https://microstudio.io/SainiSS/digitalgame3a/SWVP8M4S/">Digital Game 3A</a></li>
 <li><a href="https://microstudio.io/i/SainiSS/digitalgame3a/">Digital Game 3B</a></li>
 <li><a href="https://microstudio.io/i/SainiSS/digitalgame4a/">Digital Game 4A</a></li>
+<li><a href="https://microstudio.io/i/SainiSS/digitalgame4b/">Digital Game 4B</a></li>
 </ol>
 
 </body>
