--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body
 <li><a href="https://microstudio.io/i/SainiSS/digitalgame3a/">Digital Game 3B</a></li>
 <li><a href="https://microstudio.io/i/SainiSS/digitalgame4a/">Digital Game 4A</a></li>
 <li><a href="https://microstudio.io/SainiSS/digitalgame4b/TTMA38S4/">Digital Game 4B</a></li>
-<li><a href="https://docs.google.com/document/d/1_59NAyQbr_jRhPoGYDHKExL8VcuFz_S_g5-inpshelo/">Digital Game 5A Concept Art</a></li>
+<li><a href="https://github.com/Quplet/ProjectKaiju">Digital Game 5</a></li>
 </ol>
 
 </body>
